ChargePointServiceClient: list.getFirst() not available under Java 17 changed to list.get(0)